# ragflow

./: .gitignore  pyproject.toml
agent/: README.md  README_zh.md  api_server.py  canvas.py  settings.py  workflow_builder.py
agent/component/: __init__.py  base.py  categorize.py  code.py  exesql.py  generate.py  invoke.py  keyword.py  relevant.py  retrieval.py  rewrite.py
agent/test/: client.py  test_api_server_endpoints.py  test_api_server_import.py  test_workflow_builder.py
agent/test/dsl_examples/: complex_workflow_test.json
api/db/services/: __init__.py  conversation_service.py  knowledgebase_service.py  llm_service.py
api/utils/: web_utils.py
deepdoc/: __init__.py
deepdoc/parser/: __init__.py  html_parser.py
plugin/: __init__.py  llm_tool_plugin.py
rag/: __init__.py  prompts.py
rag/app/: tag.py
rag/llm/: __init__.py  chat_model.py
rag/utils/: __init__.py  tavily_conn.py
