[tool.poetry]
name = "agent-workflow"
version = "0.1.0"
description = "A standalone agent workflow, refactored to remove external dependencies."
authors = ["Jules <jules@example.com>"]
license = "MIT"
readme = "agent/README.md" # Assuming the agent's README is the primary one

[tool.poetry.dependencies]
python = "^3.10"

# Dependencies will be added in the next step via 'poetry add'
beartype = "^0.21.0"
pandas = "^2.3.0"
requests = "^2.32.4"
beautifulsoup4 = "^4.13.4"
duckduckgo-search = "^8.0.4"
wikipedia = "^1.4.0"
biopython = "^1.85"
arxiv = "^2.2.0"
google-search-results = "^2.4.2"
scholarly = "^1.7.11"
deepl = "^1.22.0"
yfinance = "^0.2.63"
crawl4ai = "^0.6.3"
fastapi = "^0.115.13"
uvicorn = {extras = ["standard"], version = "^0.34.3"}

[tool.poetry.group.dev.dependencies]
# Placeholder for dev dependencies if any are identified later

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
